# 309-Project

./: .gitignore  EGT309_Project_v8.ipynb  README.md  dockerfile  pyproject.toml  requirements.txt  run.sh  sai.ipynb  sai3.ipynb  test.ipynb  testingrichie.ipynb  xiu wen.ipynb  xiu_wen.ipynb
AI_Application/Practicals/Practical1/: Prac1.docx  Prac1_own.py  dockerfile  prac1_app.py  prac1_get_requests.py  prac1_post_requests.py
AI_Application/Practicals/Practical2/: Readme.txt
AI_Application/Practicals/Practical3/Practical3C/: Prac3c.docx
AI_Application/Practicals/Practical3/Practical3D/: Prac3d.docx
AI_Application/Practicals/Practical3/flask-app/: Dockerfile
AI_Application/Practicals/Practical3/web-app/: Dockerfile
Ai_Solution_Development/Prac1a/: Prac1a.ipynb
Ai_Solution_Development/Project/309-Project-Xiu-Wen/: xiu_wen.ipynb
Ai_Solution_Development/Sai_Project/V1/: best_xgb_model.json  original_stack.pkl  sai.ipynb  smote_stack.pkl  stacked_ensemble_model.pkl  xgb_model.json
Ai_Solution_Development/Sai_Project/V1/catboost_info/: catboost_training.json  (+2 more)
Ai_Solution_Development/Sai_Project/V2/: .gitignore  sai2.ipynb
Big_Data/Labs/Lab1/: Lab1_SparkForColabStudent.ipynb
Big_Data/Labs/Lab3/: Lab3_Spark_Dataframe_Student - Copy.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml
data/: olist_datadict.xlsx
data/02_intermediate/: cleaned_category_translation.parquet  cleaned_geolocation.parquet  cleaned_order_payments.parquet  cleaned_products.parquet  cleaned_sellers.parquet
saved_model/: stacked_ensemble_model.pkl
spaceflights/: pyproject.toml  requirements.txt
src/egt309_insight_boys_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/egt309_insight_boys_kedro/pipelines/: nodes.py  pipeline.py
(+18 files in other folders)
