[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "egt309_insight_boys_kedro"    # <-- matches the package/folder from `kedro new`
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "kedro[jupyter]~=0.19.12",
    "kedro-viz>=6.7.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.1",
    "xgboost>=2.0.3",
    "imbalanced-learn>=0.12.2",
    "joblib>=1.4.2",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.1",
    "jupyterlab>=3.0",
    "notebook",
    "ipython>=8.10"
]

[project.scripts]
egt309-insight-boys-kedro = "egt309_insight_boys_kedro.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.kedro]
package_name = "egt309_insight_boys_kedro"
project_name = "EGT309_Insight_Boys_Kedro"
kedro_init_version = "0.19.12"
tools = "['Linting', 'Testing', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "fec666a2ed774b5b88de26ddd48992ec"

[tool.ruff]
line-length = 88
show-fixes = true
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/egt309_insight_boys_kedro -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic]
version = {attr = "egt309_insight_boys_kedro.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
